--- a/akkak8s/resources/application.conf
+++ b/akkak8s/resources/application.conf
@@ -3,7 +3,13 @@ akka {
   actor.provider = cluster
 
   coordinated-shutdown.exit-jvm = on
+  actor {
+    serializers {
+      jackson-json = "akka.serialization.jackson.JacksonJsonSerializer"
+      jackson-cbor = "akka.serialization.jackson.JacksonCborSerializer"
+    }
 
+  }
   cluster {
     shutdown-after-unsuccessful-join-seed-nodes = 60s
   }
