--- a/akkak8s/kube/resources/application.conf
+++ b/akkak8s/kube/resources/application.conf
@@ -4,6 +4,9 @@ akka {
 
   coordinated-shutdown.exit-jvm = on
   actor {
+    serialization-bindings {
+      "akka.sample.cluster.kubernetes.CborSerializable" = jackson-cbor
+    }
     serializers {
       jackson-json = "akka.serialization.jackson.JacksonJsonSerializer"
       jackson-cbor = "akka.serialization.jackson.JacksonCborSerializer"
