--- a/akkak8s/local/resources/application.conf
+++ b/akkak8s/local/resources/application.conf
@@ -31,3 +31,11 @@ akka {
     shutdown-after-unsuccessful-join-seed-nodes = 60s
   }
 }
+
+cinnamon.akka {
+  actors {
+    "/user/*" {
+      report-by = class
+    }
+  }
+}
