--- a/akkak8s/local/resources/application.conf
+++ b/akkak8s/local/resources/application.conf
@@ -32,10 +32,44 @@ akka {
   }
 }
 
-cinnamon.akka {
-  actors {
-    "/user/*" {
-      report-by = class
+
+cinnamon.opentelemetry {
+  metrics {
+    exporters += grpc-exporter,
+    #//exporters += logging-exporter
+    #exporters += http-exporter
+  }
+  events {
+    exporters += grpc-exporter
+    #exporters += http-exporter
+  }
+}
+
+cinnamon{
+  akka {
+    cluster.domain-events = on
+    cluster.member-events = on
+    cluster.node-status = on
+    cluster.singleton-events = on
+    cluster.shard-region-info = on
+    actors {
+      "/user" {
+        report-by = instance
+      }
+      "/user/*" {
+        report-by = group
+      }
+    }
+    http.servers {
+      "*:*" {
+        paths {
+          "*" {
+            metrics = on
+          }
+        }
+      }
     }
   }
+
+  opentelemetry.metrics.grpc-exporter.interval = 10 seconds
 }
