trying to run monitoring on kube

--- a/akkak8s/kube/resources/application.conf
+++ b/akkak8s/kube/resources/application.conf
@@ -38,3 +38,55 @@ akka.management {
     }
   }
 }
+
+
+
+cinnamon.opentelemetry {
+  metrics {
+    exporters += grpc-exporter,
+
+    grpc-exporter {
+      # Define the interval of reads.
+      interval = 10 seconds
+
+      # Sets the OTLP endpoint to connect to. The endpoint must start with either http:// or https://.
+      endpoint = "http://192.168.1.159:4317"
+
+    }
+
+    #//exporters += logging-exporter
+    #exporters += http-exporter
+  }
+  events {
+    exporters += grpc-exporter
+    #exporters += http-exporter
+  }
+}
+
+cinnamon{
+  akka {
+    cluster.domain-events = on
+    cluster.member-events = on
+    cluster.node-status = on
+    cluster.singleton-events = on
+    cluster.shard-region-info = on
+    actors {
+      "/user" {
+        report-by = instance
+      }
+      "/user/*" {
+        report-by = group
+      }
+    }
+    http.servers {
+      "*:*" {
+        paths {
+          "*" {
+            metrics = on
+          }
+        }
+      }
+    }
+  }
+
+}
