monitoring cluster nodes

--- a/akkak8s/local/resources/application.conf
+++ b/akkak8s/local/resources/application.conf
@@ -53,6 +53,13 @@ cinnamon{
     cluster.singleton-events = on
     cluster.shard-region-info = on
     actors {
+      "/sytem/sharding/HelloActor/*" {
+        report-by = instance
+      }
+
+      "/system/sharding/HelloActor/*" {
+        report-by = group
+      }
       "/user" {
         report-by = instance
       }
