cinnamon 20.1 (works with scala 3)

--- a/akkak8s/local/resources/application.conf
+++ b/akkak8s/local/resources/application.conf
@@ -27,6 +27,7 @@ akka {
 
     sharding {
       number-of-shards = 100
+      least-shard-allocation-strategy.rebalance-absolute-limit = 20
     }
     shutdown-after-unsuccessful-join-seed-nodes = 60s
   }
